--- a/package.json
+++ b/package.json
@@ -7,6 +7,6 @@
     "esbuild": "^0.15.9"
   },
   "scripts": {
-    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=assets"
+    "build": "esbuild app/javascript/application.js --bundle --sourcemap --outdir=app/assets/builds --public-path=assets"
   }
 }
