--- a/config/database.yml
+++ b/config/database.yml
@@ -23,7 +23,7 @@ default: &default
 
 development:
   <<: *default
-  database: open_flights_development
+  database: open_flights_app_development
   username: postgres
   password: <%= ENV["OPEN_FLIGHTS_DATABASE_PASSWORD"] %>
   port: 5432
@@ -61,7 +61,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: open_flights_test
+  database: open_flights_app_test
   username: postgres
   password: <%= ENV["OPEN_FLIGHTS_DATABASE_PASSWORD"] %>
   port: 5432
@@ -88,7 +88,7 @@ test:
 #
 production:
   <<: *default
-  database: open_flights_production
+  database: open_flights_app_production
   username: postgres
   password: <%= ENV["OPEN_FLIGHTS_DATABASE_PASSWORD"] %>
   port: 5432
