--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "@hotwired/turbo-rails": "^7.2.0",
     "esbuild": "^0.15.9",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.1"
   },
   "scripts": {
     "build": "esbuild app/javascript/application.js --bundle --sourcemap --outdir=app/assets/builds --public-path=assets --loader:.js=jsx"
