--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.1.0",
     "@hotwired/turbo-rails": "^7.2.0",
+    "axios": "^1.1.2",
     "esbuild": "^0.15.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
