--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "esbuild": "^0.15.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "5.2.0"
+    "react-router-dom": "5.2.0",
+    "styled-components": "^5.3.6"
   },
   "scripts": {
     "build": "esbuild app/javascript/application.js --bundle --sourcemap --outdir=app/assets/builds --public-path=assets --loader:.js=jsx"
